--- a/TiniChat/app/src/main/AndroidManifest.xml
+++ b/TiniChat/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.TiNiChat"
         tools:targetApi="31">
         <activity
+            android:name=".activities.ChatActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.UsersActivity"
             android:exported="false" />
         <activity
